--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,6 @@
   color: #fff;
 }
 
-
 *,
 *::before,
 *::after {
@@ -1322,4 +1321,10 @@ body {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
+}
+
+.mapPopup {
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  font-size: 1.4rem;
 }
