--- a/views/base.pug
+++ b/views/base.pug
@@ -1,6 +1,6 @@
 doctype html
 html
-  head
+  block head
     meta(charset='UTF-8') 
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' href='/css/style.css')
@@ -8,19 +8,18 @@ html
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
     title Natours | #{title}
 
-  body
-    include _header
-
-    //- section.overview
-    //-   h1= tour
-    block content
-      //- h1 this is Placeholder
-
-    include _footer
+body
+  include _header
 
 
+  block content
 
+  include _footer
+
+
+  script(src='/js/leaflet.js')
 
 
 
-  body
+
+body
