--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,9 +1,12 @@
 extends base
 include _reviewCard
 
-//- block append head
-//-   script(src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js')
-//-   link(href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet')
+block append head
+  link(rel='stylesheet' href='https://unpkg.com/leaflet@1.8.0/dist/leaflet.css'
+    integrity='sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==' crossorigin='')
+  script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+    crossorigin="")
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -66,6 +69,8 @@ block content
     each img, i in tour.images
       .picture-box
         img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
+
+
 
   section.section-map
     #map(data-locations=`${JSON.stringify(tour.locations)}`)
