--- a/views/_header.pug
+++ b/views/_header.pug
@@ -5,5 +5,5 @@ header.header
     img(src='/img/logo-white.png' alt='natours logo')
   nav.nav.nav--user
 
-    button.nav__el Login
-    button.nav__el.nav__el--cta Sign Up
+    a.nav__el(href="/login") Login
+    a.nav__el.nav__el--cta(href="/signup") Sign Up
