--- a/views/base.pug
+++ b/views/base.pug
@@ -1,27 +1,27 @@
 doctype html
 html
-  block head
-    meta(charset='UTF-8') 
-    meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' href='/css/style.css')
-    link(rel='shortcut icon' type='/image/png' href='/img/favicon.png')
-    link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
-    title Natours | #{title}
+  head
+    block head
+      meta(charset='UTF-8')
+      meta(name='viewport' content='width=device-width, initial-scale=1.0')
+      link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+      link(rel='stylesheet' href='/css/style.css')
+      link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
+      title Natours | #{title}
 
-body
-  include _header
+  body(data-alert=`${alert ? alert : ''}`)
+    // HEADER
+    include _header
 
+    // CONTENT
+    block content 
+      h1 This is a placeholder
 
-  block content
+    // FOOTER
+    include _footer
 
-  include _footer
-
-
-  script(src='/js/leaflet.js')
-  script(src='/js/login.js')
-
-
-
-
-
-body
+    // SCRIPTS
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js' integrity='sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg==' crossorigin='anonymous' referrerpolicy='no-referrer')
+    script(type='module' src='/js/login.js')
+    script(type='module' src='/js/index.js')
+    script(src='https://js.stripe.com/v3/')
